--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
     <title>Project OneUp</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    
+    <link rel="stylesheet" href="assets/css/libs.css">
+    <link rel="stylesheet" href="assets/css/material.css">
+    <link rel="stylesheet" href="assets/css/foca.css">
+
 </head>
 
 <body ng-app="app" ng-controller="base">
-    <header class="header theme-{{uiTheme}}">
-        {{ pageTitle }}
+    <header>
     </header>
     <div ui-view="main" class="app">
-
     </div>
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="vendor/angular.min.js"></script>
