--- a/index.html
+++ b/index.html
@@ -5,20 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
     <title>Project OneUp</title>
-    
+    <link rel="stylesheet" href="assets/css/material.css">
     <link rel="stylesheet" href="assets/css/libs.css">
+    <link rel="stylesheet" href="assets/css/ionic.min.css">
+    <link rel="stylesheet" href="assets/css/waves.css">
     <link rel="stylesheet" href="assets/css/foca.css">
-
+    <script type="text/javascript" src="vendor/jquery.js"></script>
 </head>
 
 <body ng-app="app" ng-controller="base">
     <header>
-
     </header>
     <div ui-view="main" class="app">
     </div>
+    
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="vendor/angular.min.js"></script>
+    <script type="text/javascript" src="vendor/waves.min.js"></script>
+    <script type="text/javascript" src="vendor/material-ionic.js"></script>
     <script type="text/javascript" src="vendor/angular-ui-router.min.js"></script>
     <script type="text/javascript" src="app/application.js"></script>
     <!-- Constants -->
@@ -31,6 +35,13 @@
     <script type="text/javascript" src="app/controllers/base-controller.js"></script>
     <script type="text/javascript" src="app/controllers/main-controller.js"></script>
     <script type="text/javascript" src="app/controllers/login-controller.js"></script>
+
+    <script>
+        Waves.displayEffect();
+        setTimeout(function() {
+            Mi.motion.slideUp('.slide-up');
+        }, 0);
+    </script>
 </body>
 
 </html>
